--- a/package.json
+++ b/package.json
@@ -10,10 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@material-tailwind/react": "^2.1.10",
+    "@mui/material": "^6.4.6",
+    "@tanstack/react-query": "^5.66.9",
+    "@tanstack/react-query-devtools": "^5.66.9",
+    "axios": "^1.8.1",
+    "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.3"
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.22.3",
+    "tw-elements-react": "^1.0.0-alpha-end",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
